# lambda-image-resize-rust

./: Cargo.toml  README.org
src/: main.rs
