[package]
name = "lambda-image-resize-rust"
version = "0.1.0"
authors = ["Robert Beekman <robert@matsimitsu.nl>", "Michał Buczko <michal@buczko.pl>"]

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "*"
log = "^0.4"
simple_logger = "^1"
aws_lambda_events = "^0.2.0"
rust-s3 = "0.10.0"
image = "0.23.4"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
